--- a/src/vistas/VistaLogin.form
+++ b/src/vistas/VistaLogin.form
@@ -72,7 +72,7 @@
             <Component class="javax.swing.JLabel" name="jLabel4">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/oferta.png"/>
+                  <Image iconType="3" name="/img/lOGIN.png"/>
                 </Property>
               </Properties>
             </Component>
@@ -119,7 +119,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="INICIO DE SESION"/>
+                <Property name="text" type="java.lang.String" value="BIENVENIDO"/>
               </Properties>
             </Component>
           </SubComponents>
