--- a/src/vistas/VistaUsuarios.form
+++ b/src/vistas/VistaUsuarios.form
@@ -55,7 +55,7 @@
                               </Group>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="txtUsuariosUsuario" alignment="0" pref="80" max="32767" attributes="0"/>
-                                  <Component id="txtUsuariosPassword" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="txtUsuariosContrasena" alignment="0" max="32767" attributes="0"/>
                                   <Component id="txtUsuariosEstado" alignment="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
@@ -119,7 +119,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtUsuariosPassword" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtUsuariosContrasena" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -205,7 +205,7 @@
         <Property name="text" type="java.lang.String" value="Contrase&#xf1;a"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JPasswordField" name="txtUsuariosPassword">
+    <Component class="javax.swing.JPasswordField" name="txtUsuariosContrasena">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
       <Properties>
