--- a/src/vistas/VistaUsuarios.form
+++ b/src/vistas/VistaUsuarios.form
@@ -206,6 +206,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JPasswordField" name="txtUsuariosContrasena">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtUsuariosContrasenaActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
       <Properties>
